# gnome-initial-setup

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  meson.build  meson_options.txt
.tx/: config
data/: 20-gnome-initial-setup.rules  20-gnome-initial-setup.rules.in  Makefile.am  Makefile.in  com.endlessm.DemoMode.policy.in  com.endlessm.DemoMode.rules  eos-demo-video.desktop.in  eos-demo-video.desktop.in.in  eos-demo-video.webm  eos-transient-setup.service.in  initial-setup.json  meson.build  product_serial.conf
debian/: README.source  changelog  control  control.in  copyright  custom.conf  docs  gbp.conf  gnome-initial-setup.maintscript  gnome-initial-setup.pkla  install  links  postrm  rules  vendor.conf
debian/patches/: Add-StartupWMClass-to-.desktop-file.patch  Update-Icelandic-translation-1.patch  Update-Icelandic-translation.patch  Update-for-removal-of-WebKitGTK-sandbox-API.patch  adapt-to-gsd325.patch  build-Fix-Meson-deprecation-warning.patch  driver-Set-a-non-trivial-window-title.patch  keyboard-Correctly-update-labels-for-IBus-engines.patch  polkit-allow-NM.patch  pollkit-allow-NM.patch  series  (+8 more)
gnome-initial-setup/: Makefile.am  Makefile.in  cc-common-language.c  eos-demo-mode  eos-note-demo-config  eos-remove-demo-user  eos-setup-demo-user  eos-setup-demo-user-autologin  eos-transient-setup  gis-assistant-resources.c  gis-assistant-resources.h  gis-assistant.c  gis-assistant.h  gis-driver.c  gis-driver.h  gis-factory-dialog.c  gis-factory-dialog.gresource.xml  gis-factory-dialog.h  gis-factory-dialog.ui  gis-music-player.c  gis-music-player.h  gis-page-util.c  gis-page-util.gresource.xml  gis-page-util.h  gis-page-util.ui  gis-page.c  gis-page.h  gis-pkexec.c  gis-pkexec.h  gis-window.c  gis-window.h  gnome-initial-setup-copy-worker.c  gnome-initial-setup.c  gnome-initial-setup.h  gnome-initial-setup.in  meson.build  modals.css  setlocale-wrapper.c
gnome-initial-setup/demo/: Makefile.am  eos-demo-video.c  eos-demo-video.h  meson.build
gnome-initial-setup/eos/: meson.build
gnome-initial-setup/eos/hack-sound-client/: eos-hack-sound-client.c  eos-hack-sound-client.h  meson.build
gnome-initial-setup/pages/: Makefile.am  Makefile.in  meson.build
gnome-initial-setup/pages/account/: Makefile.in  account-resources.c  account.css  account.gresource.xml  gis-account-page-eula-dialog.c  gis-account-page-eula-dialog.h  gis-account-page-eula-dialog.ui  gis-account-page-local.c  gis-account-page-local.h  gis-account-page-local.ui  gis-account-page.c  gis-account-page.ui  gis-account-pages.c  meson.build  um-photo-dialog.c  um-realm-generated.c  um-realm-generated.h  um-realm-manager.c  um-utils.c  um-utils.h
gnome-initial-setup/pages/branding-welcome/: Makefile.am  branding-welcome-page.css  branding-welcome.gresource.xml  gis-branding-welcome-page.c  gis-branding-welcome-page.h  gis-branding-welcome-page.ui  meson.build
gnome-initial-setup/pages/display/: Makefile.am  cc-display-config-dbus.c  cc-display-config.c  cc-display-config.h  gis-display-page.c  gis-display-page.h  gis-display-page.ui  meson.build
gnome-initial-setup/pages/endless-eula/: Makefile.am  endless-eula.gresource.xml  gis-endless-eula-page.c  gis-endless-eula-page.h  gis-endless-eula-page.ui  gis-endless-eula-viewer.c  gis-endless-eula-viewer.h  gis-endless-eula-viewer.ui  meson.build
gnome-initial-setup/pages/eulas/: Makefile.in  eulas-resources.c  eulas-resources.h  gis-eula-pages.c
gnome-initial-setup/pages/goa/: Makefile.in  gis-goa-page.c  gis-goa-page.ui  goa-resources.c  goa-resources.h
gnome-initial-setup/pages/keyboard/: Makefile.am  Makefile.in  cc-input-chooser.c  cc-keyboard-query.c  gis-keyboard-page.c  gis-keyboard-page.ui  input-chooser.ui  keyboard-detector.ui  keyboard-resources.c  keyboard-resources.h  meson.build
gnome-initial-setup/pages/language/: Makefile.am  Makefile.in  cc-common-language.c  cc-language-chooser.c  cc-util.c  eos-test-mode  gis-language-page.c  gis-language-page.ui  gis-welcome-widget.c  language-chooser.ui  language-resources.c  language-resources.h  language.gresource.xml  meson.build
gnome-initial-setup/pages/live-chooser/: Makefile.am  eos-setup-live-user  gis-live-chooser-page.c  gis-live-chooser-page.h  gis-live-chooser-page.ui  live-chooser.css  live-chooser.gresource.xml  meson.build
gnome-initial-setup/pages/location/: gis-location-page.c
gnome-initial-setup/pages/network/: Makefile.in  gis-network-page.c  gis-network-page.ui  network-resources.c  network-resources.h
gnome-initial-setup/pages/parental-controls/: gis-parental-controls-page.c
gnome-initial-setup/pages/password/: Makefile.in  gis-password-page.c  gis-password-page.ui  password-resources.c  password.gresource.xml
gnome-initial-setup/pages/privacy/: Makefile.in  gis-privacy-page.c  gis-privacy-page.ui  privacy-resources.c
gnome-initial-setup/pages/region/: Makefile.in  gis-region-page.c  gis-region-page.ui  region-resources.c  region-resources.h
gnome-initial-setup/pages/site/: Makefile.am  README.md  deployment-sites.json.example  eos-write-location  gis-site-page.c  gis-site-page.h  gis-site-page.ui  gis-site-search-entry.c  gis-site-search-entry.h  gis-site.c  gis-site.h  meson.build  site.gresource.xml
gnome-initial-setup/pages/software/: Makefile.in  gis-software-page.c  software-resources.c  software-resources.h
gnome-initial-setup/pages/summary/: Makefile.am  Makefile.in  gis-summary-page.c  gis-summary-page.ui  summary-resources.c  summary-resources.h  summary.gresource.xml
gnome-initial-setup/pages/timezone/: Makefile.in  cc-datetime-resources.h  cc-timezone-map.c  gis-timezone-page.c  gis-timezone-page.ui  timedated.c  timedated.h  timezone-resources.c  timezone-resources.h
po/: LINGUAS  POTFILES.in  af.gmo  af.po  am.po  an.gmo  an.po  ar.gmo  ar.po  as.gmo  as.po  ast.po  az.po  be.gmo  be.po  bg.gmo  bg.po  bn.po  bn_IN.gmo  bn_IN.po  bo.po  br.po  bs.gmo  bs.po  ca.gmo  ca.po  ca@valencia.gmo  ca@valencia.po  ckb.po  crh.po  cs.gmo  cs.po  csb.po  cy.po  da.gmo  da.po  de.gmo  de.po  dz.po  el.gmo  (+152 more)
(+1 files in other folders)
