sources += gnome.compile_resources(
    'display-resources',
    files('display.gresource.xml'),
    c_name: 'display'
)

sources += files(
    'cc-display-config.c',
    'cc-display-config-dbus.c',
    'cc-display-config-manager.c',
    'cc-display-config-manager-dbus.c',
    'gis-display-page.c',
)
