sources += gnome.compile_resources(
    'keyboard-resources',
    files('keyboard.gresource.xml'),
    c_name: 'keyboard'
)

sources += files(
    'cc-input-chooser.c',
    'cc-input-chooser.h',
    'cc-ibus-utils.c',
    'cc-ibus-utils.h',
    'cc-keyboard-detector.c',
    'cc-keyboard-detector.h',
    'cc-keyboard-query.c',
    'cc-keyboard-query.h',
    'cc-key-row.c',
    'cc-key-row.h',
    'gis-keyboard-page.c',
    'gis-keyboard-page.h'
)
